--- a/index.html
+++ b/index.html
@@ -1,44 +1,123 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <header>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <div class="container-fluid">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" href="index.html">News</a>
-                </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="about.html">About Ugur</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="Contact.html">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
 
-        
-    </header>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ugur News</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="shortcut icon" href="images/logo.png">
-    <style>
-        img{
-            height: 400px;
-            object-fit: contain;
-        }
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>News Website</title>
 </head>
-<body>
-    <div class="container">
-        <h1>Ugur News</h1>
-        <div id="output"></div>
-        <p id="copyright"></p>
-    </div>
-    <script src="main.js"></script>
+
+<body class="m-0 p-0">
+
+    <div class="container-fluid m-0 p-0">
+
+        <!-- navbar -->
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-warning" href="#">Ugur News</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#genral" id="genral">Genral</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#business" id="business" >Business</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#sports" id="sport">Sports</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#tehnology" id="technology">Technology</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#entertainment" id="entertainment">Entertainment</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="text" id="newsQuery" placeholder="Search news">
+                            <button class="btn btn-outline-warning" type="button" id="searchBtn">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+        <!-- News  -->
+        <div>
+            <div class="row m-3" id="newsType"></div>
+            <div class="row me-2 ms-2" id="newsdetails"></div>
+        </div>
+        <footer class=" text-center text-lg-start bg-dark text-muted">
+            <div class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+              <div>
+              </div>
+            </div>
+            <section>
+              <div class="container text-center text-md-start mt-5 footernavbar">
+                <div class="row mt-3">
+                  <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">
+                      <i class="fas fa-gem me-3"></i>Ugur News
+                    </h6>
+                    <p>The latest news</p>
+                  </div>
+                  <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">
+                      Über uns
+                    </h6>
+                    <p>
+                      <a href="index.html?#genral" class="footernavbarlinks">Kontakt</a>
+                    </p>
+                  </div>
+                  <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">
+                      Nützliche Links
+                    </h6>
+                    <p>
+                      <a href="index.html?#genral" class="footernavbarlinks">General</a>
+                    </p>
+                    <p>
+                      <a href="index.html?#business" class="footernavbarlinks">Buisness</a>
+                    </p>
+                    <p>
+                        <a href="index.html?#sports" class="footernavbarlinks">Sports</a>
+                      </p>
+                      <p>
+                        <a href="index.html?#tehnology" class="footernavbarlinks">Technology</a>
+                      </p>
+                  </div>
+                  <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">Kontakt</h6>
+                    <p><i class="fas fa-home me-3"></i> Edenstrasse 20, 8045 Zürich</p>
+                    <p>
+                      <i class="fas fa-envelope me-3"></i>
+                      info@ugurnews.ch
+                    </p>
+                    <p><i class="fas fa-phone me-3"></i> +41 44 552 82 00</p>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <div class="text-center p-4 footercopyright footernavbar">
+              © 2022 Copyright:
+              <a class="footernavbarlinks" target="_blank" href="https://zli.ch/">ugurnews.ch</a>
+            </div>
+          </footer>
+
+
+    <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
