--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="utf-8">
@@ -7,18 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>News Website</title>
+    <title>Ugur News</title>
 </head>
 
 <body class="m-0 p-0">
 
     <div class="container-fluid m-0 p-0">
-
-        <!-- navbar -->
         <div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-warning" href="#genral">Ugur News</a>
+                    <a class="navbar-brand text-warning" href="#">Ugur News</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +49,6 @@
             </nav>
         </div>
 
-        <!-- News  -->
         <div>
             <div class="row m-3" id="newsType"></div>
             <div class="row me-2 ms-2" id="newsdetails"></div>
