--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <title>Ugur News</title>
 </head>
 
-<body class="m-0 p-0">
-
+<body class="m-0 p-0" >
     <div class="container-fluid m-0 p-0">
         <div>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-grey">
                 <div class="container-fluid">
                     <a class="navbar-brand text-warning" href="#">Ugur News</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
