--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="style.css">
     <title>Ugur News</title>
 </head>
-
-<body class="m-0 p-0" >
-    <div class="container-fluid m-0 p-0">
+  <header>
+  <div class="container-fluid m-0 p-0">
         <div>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-grey">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-black">
                 <div class="container-fluid">
                     <a class="navbar-brand text-warning" href="#">Ugur News</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -47,12 +46,13 @@
                 </div>
             </nav>
         </div>
-
+      </header>
+      <body class="m-0 p-0" >
         <div>
             <div class="row m-3" id="newsType"></div>
             <div class="row me-2 ms-2" id="newsdetails"></div>
         </div>
-        <footer class=" text-center text-lg-start bg-dark text-muted">
+        <footer class=" text-center text-lg-start bg-black text-muted">
             <div class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
               <div>
               </div>
@@ -64,41 +64,40 @@
                     <h6 class="text-uppercase fw-bold mb-4">
                       <i class="fas fa-gem me-3"></i>Ugur News
                     </h6>
-                    <p>The latest news</p>
+                    <p1>The latest news</p1>
                   </div>
                   <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                     <h6 class="text-uppercase fw-bold mb-4">
                       Über uns
                     </h6>
-                    <p>
+                    <p1>
                       <a href="index.html?#genral" class="footernavbarlinks">Kontakt</a>
-                    </p>
+                    </p1>
                   </div>
                   <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                     <h6 class="text-uppercase fw-bold mb-4">
                       Nützliche Links
                     </h6>
-                    <p>
+                    <p1>
                       <a href="index.html?#genral" class="footernavbarlinks">General</a>
-                    </p>
-                    <p>
+                    </p1>
+                    <p1>
                       <a href="index.html?#business" class="footernavbarlinks">Buisness</a>
-                    </p>
-                    <p>
+                    </p1>
+                    <p1>
                         <a href="index.html?#sports" class="footernavbarlinks">Sports</a>
-                      </p>
-                      <p>
+                      </p1>
+                      <p1>
                         <a href="index.html?#tehnology" class="footernavbarlinks">Technology</a>
-                      </p>
+                      </p1>
                   </div>
                   <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                     <h6 class="text-uppercase fw-bold mb-4">Kontakt</h6>
-                    <p><i class="fas fa-home me-3"></i> Edenstrasse 20, 8045 Zürich</p>
-                    <p>
-                      <i class="fas fa-envelope me-3"></i>
-                      info@ugurnews.ch
-                    </p>
-                    <p><i class="fas fa-phone me-3"></i> +41 44 552 82 00</p>
+                    <p1><i class="fas fa-home me-3"></i>Edenstrasse 20, 8045 Zürich</p1>
+                    <p1>
+                      <i class="fas fa-envelope me-3"></i>info@ugurnews.ch
+                    </p1>
+                    <p1><i class="fas fa-phone me-3"></i>+41 44 552 82 00</p1>
                   </div>
                 </div>
               </div>
