--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                       Nützliche Links
                     </h6>
                     <p1>
-                      <a href="index.html?#genral" class="footernavbarlinks">General</a>
+                      <a href="index.html?#genral" class="footernavbarlinks">General <br></a>
                     </p1>
                     <p1>
-                      <a href="index.html?#business" class="footernavbarlinks">Buisness</a>
+                      <a href="index.html?#business" class="footernavbarlinks">Buisness <br></a>
                     </p1>
                     <p1>
-                        <a href="index.html?#sports" class="footernavbarlinks">Sports</a>
+                        <a href="index.html?#sports" class="footernavbarlinks">Sports <br></a>
                       </p1>
                       <p1>
                         <a href="index.html?#tehnology" class="footernavbarlinks">Technology</a>
@@ -93,11 +93,9 @@
                   </div>
                   <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                     <h6 class="text-uppercase fw-bold mb-4">Kontakt</h6>
-                    <p1><i class="fas fa-home me-3"></i>Edenstrasse 20, 8045 Zürich</p1>
-                    <p1>
-                      <i class="fas fa-envelope me-3"></i>info@ugurnews.ch
-                    </p1>
-                    <p1><i class="fas fa-phone me-3"></i>+41 44 552 82 00</p1>
+                    <p1>Edenstrasse 20, 8045 Zürich</p1>
+                    <p1>info@ugurnews.ch</p1>
+                    <p1><i class="fas fa-phone me-3"></i><br> +41 44 552 82 00</p1>
                   </div>
                 </div>
               </div>
