--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </ul>
                         <form class="d-flex">
                             <input class="form-control me-2" type="text" id="newsQuery" placeholder="Search news">
-                            <button class="btn btn-outline-warning" type="button" id="searchBtn">Search</button>
+                            <button style="position: relative" class ="btn btn-outline-warning" type="button" id="searchBtn">Search</button>
                         </form>
                     </div>
                 </div>
