--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-black">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-warning" href="#">Ugur News</a>
+                    <a class="navbar-brand text-warning" href="#"><img src="images/logo2.png" alt="" width="200px"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
