--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
                         <a href="index.html?#sports" class="footernavbarlinks">Sports <br></a>
                       </p1>
                       <p1>
-                        <a href="index.html?#tehnology" class="footernavbarlinks">Technology</a>
+                        <a href="index.html?#tehnology" class="footernavbarlinks">Technology<br></a>
+                      </p1>
+                      <p1>
+                        <a href="index.html?#entertainment" class="footernavbarlinks">Entertainment</a>
                       </p1>
                   </div>
                   <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
@@ -103,7 +106,7 @@
               </div>
             </section>
             <div class="text-center p-4 footercopyright footernavbar">
-              © 2022 Copyright:
+              <p1>© 2022 Copyright:</p1>
               <a class="footernavbarlinks" target="_blank" href="https://zli.ch/">ugurnews.ch</a>
             </div>
           </footer>
