--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
               <div class="container text-center text-md-start mt-5 footernavbar">
                 <div class="row mt-3">
                   <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
                     <h6 class="text-uppercase fw-bold mb-4">
-                      <i class="fas fa-gem me-3"></i>Ugur News
+
+                        <a  class="footernavbarlinks">Ugur News</a>
+
                     </h6>
                     <p1>        The latest news</p1>
                   </div>
