--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/images/icon.png">
 
     <title>Ugur News</title>
 </head>
   <header>
   <div class="container-fluid m-0 p-0">
         <div>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
                     <a class="navbar-brand text-warning" href="#"><img id="imgnav" src="images/logo2.png" alt="" width="200px"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
