--- a/About us.html
+++ b/About us.html
@@ -41,6 +41,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="index.html#entertainment" id="entertainment">Entertainment</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="About us.html" id="entertainment">About Us</a>
+                            </li>
                         </ul>
                         <form class="d-flex">
                             <input style="height: 75%" class="form-control me-2" type="text" id="newsQuery" placeholder="Search news">
@@ -57,12 +60,12 @@
   <div class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"></div>
   <div class="text-center text-grey">
     <div id="unserteamtext" class="col-lg-8 mx-auto">
-      <h1>Unser Team</h1>
+      <h2>Unser Team</h2>
       <p1>Wir bei der EvoWater AG sind wir fleissige CEOs die für Schweizer die perfekten Produkte herstellen möchten.
       </p1>
       <p1>Unser Ziel ist es, dass alle Schweizer sich gesund ernähren und unsere Produkte kaufen.</p1>
       <p1> <a href="https://github.com/Ar1nArlind/CodeWeek-Autumn-Startup" target="_blank"> GitHub Repository</a>
-        (Private)</p1>
+        (Private)</p1><hr>
     </div>
   </div>
   <div id="unserteam">
@@ -74,7 +77,7 @@
             <a href="https://github.com/Ar1nArlind" target="_blank" class="aprice">
               <img src="/images/Ugur Deniz_small (1).jpg" alt="Sulejmani_Arlind" width="400"
                 class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-              <h5 class="mb-0 text-center">Denniz Ugur</h5>
+              <h5 class="mb-0 text-center">Deniz Ugur</h5>
             </a>
             <p class="small text-uppercase text-muted text-center ">CEO - Founder</p>
           </div>
@@ -82,9 +85,9 @@
         <div class="col-xl-4 col-sm-7 mb-5 align-self-center">
             <div class="bg-white rounded shadow-sm py-2 px-4">
               <a href="https://github.com/Ar1nArlind" target="_blank" class="aprice">
-                <img src="/images/Sulejmani_Arlind.jpg" alt="Sulejmani_Arlind" width="400"
+                <img src="/images/fran.jpg" alt="Sulejmani_Arlind" width="400"
                   class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                <h5 class="mb-0 text-center">Arlind Sulejmani</h5>
+                <h5 class="mb-0 text-center">Fran Matkovic</h5>
               </a>
               <p class="small text-uppercase text-muted text-center ">CEO - Founder</p>
             </div>
@@ -92,9 +95,9 @@
         <div class="col-xl-4 col-sm-7 mb-5 align-self-center">
           <div class="bg-white rounded shadow-sm py-2 px-4">
             <a href="https://github.com/simonstreuli" target="_blank" class="aprice">
-              <img src="/images/Streuli_Simon.jpg" alt="Streuli_Simon" width="400"
+              <img src="/images/streuli.jpg" alt="Streuli_Simon" width="400"
                 class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-              <h5 class="mb-0 text-center">Simon Streuili</h5>
+              <h5 class="mb-0 text-center">Simon Streuli</h5>
             </a>
             <p class="small text-uppercase text-muted text-center ">CEO - Founder</p>
           </div>
