--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#entertainment" id="entertainment">Entertainment</a>
                             </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="About us.html" id="entertainment">About Us</a>
+                          </li>
                         </ul>
                         <form class="d-flex">
                             <input style="height: 75%" class="form-control me-2" type="text" id="newsQuery" placeholder="Search news">
