--- a/About us.html
+++ b/About us.html
@@ -57,10 +57,15 @@
         </div>
        
   </header>
+  <label class="switch" id="darkmode">
+    <input onclick="darkmode()" type="checkbox" id="darkmode">
+    <span class="slider round"></span>
+  </label>
+  
   <div class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"></div>
   <div class="text-center text-grey">
     <div id="unserteamtext" class="col-lg-8 mx-auto">
-      <h2>Unser Team</h2>
+      <h2>Our Team</h2>
         <hr>
     </div>
   </div>
@@ -80,7 +85,7 @@
         </div>
         <div class="col-xl-4 col-sm-7 mb-5 align-self-center">
             <div class="bg-white rounded shadow-sm py-2 px-4">
-              <a href="https://github.com/Ar1nArlind" target="_blank" class="aprice">
+              <a href="https://www.instagram.com/fran_mat_/" target="_blank" class="aprice">
                 <img src="/images/fran.jpg" alt="Sulejmani_Arlind" width="400"
                   class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
                 <h5 class="mb-0 text-center">Fran Matkovic</h5>
