--- a/About us.html
+++ b/About us.html
@@ -75,7 +75,7 @@
 
         <div class="col-xl-4 col-sm-7 mb-5 align-self-center">
           <div class="bg-white rounded shadow-sm py-2 px-4">
-            <a href="https://github.com/Ar1nArlind" target="_blank" class="aprice">
+            <a href="https://www.instagram.com/deniz_jouce/" target="_blank" class="aprice">
               <img src="/images/Ugur Deniz_small (1).jpg" alt="Sulejmani_Arlind" width="400"
                 class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
               <h5 class="mb-0 text-center">Deniz Ugur</h5>
