--- a/About us.html
+++ b/About us.html
@@ -76,7 +76,7 @@
         <div class="col-xl-4 col-sm-7 mb-5 align-self-center">
           <div class="bg-white rounded shadow-sm py-2 px-4">
             <a href="https://www.instagram.com/deniz_jouce/" target="_blank" class="aprice">
-              <img src="/images/Ugur Deniz_small (1).jpg" alt="Sulejmani_Arlind" width="400"
+              <img src="/images/Ugur Deniz_small (1).jpg" alt="Ugur Deniz" width="400"
                 class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
               <h5 class="mb-0 text-center">Deniz Ugur</h5>
             </a>
@@ -85,7 +85,7 @@
         </div>
         <div class="col-xl-4 col-sm-7 mb-5 align-self-center">
             <div class="bg-white rounded shadow-sm py-2 px-4">
-              <a href="https://www.instagram.com/fran_mat_/" target="_blank" class="aprice">
+              <a href="https://www.instagram.com/fran_mat_/" target="_blank" class="aprice">  
                 <img src="/images/fran.jpg" alt="Sulejmani_Arlind" width="400"
                   class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
                 <h5 class="mb-0 text-center">Fran Matkovic</h5>
@@ -96,7 +96,7 @@
         <div class="col-xl-4 col-sm-7 mb-5 align-self-center">
           <div class="bg-white rounded shadow-sm py-2 px-4">
             <a href="https://github.com/simonstreuli" target="_blank" class="aprice">
-              <img src="/images/streuli.jpg" alt="Streuli_Simon" width="400"
+              <img src="/images/streuli.jpg" alt="Streuli Laurenz Simon" width="400"
                 class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
               <h5 class="mb-0 text-center">Simon Streuli</h5>
             </a>
@@ -134,7 +134,7 @@
               Über uns
             </h6>
             <p1>
-              <a href="index.html?#genral" class="footernavbarlinks">Kontakt</a>
+              <a href="About us.html" class="footernavbarlinks">Kontakt</a>
             </p1>
           </div>
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
