--- a/About us.html
+++ b/About us.html
@@ -27,27 +27,27 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html#general" id="genral">Genral</a>
+                                <a class="nav-link" aria-current="page" href="index.html#general" id="genral">Allgemein</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="index.html#business" id="business" >Business</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html#sports" id="sport">Sports</a>
+                                <a class="nav-link" href="index.html#sports" id="sport">Sport</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html#tehnology" id="technology">Technology</a>
+                                <a class="nav-link" aria-current="page" href="index.html#tehnology" id="technology">Technologie</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="index.html#entertainment" id="entertainment">Entertainment</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="About us.html" id="entertainment">About Us</a>
+                                <a class="nav-link" href="About us.html" id="entertainment">Über Uns</a>
                             </li>
                         </ul>
                         <form class="d-flex">
-                            <input style="height: 75%" class="form-control me-2" type="text" id="newsQuery" placeholder="Search news">
-                            <button style="position: relative" class ="btn btn-outline-warning" type="button" id="searchBtn">Search</button>
+                            <input style="height: 75%" class="form-control me-2" type="text" id="newsQuery" placeholder="Suche News">
+                            <button style="position: relative" class ="btn btn-outline-warning" type="button" id="searchBtn">Suchen</button>
                         </form>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
   <div class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"></div>
   <div class="text-center text-grey">
     <div id="unserteamtext" class="col-lg-8 mx-auto">
-      <h2>Our Team</h2>
+      <h2>Unser Team</h2>
         <hr>
     </div>
   </div>
@@ -127,7 +127,7 @@
                 <a  class="footernavbarlinks">Ugur News</a>
 
             </h6>
-            <p1>        The latest news</p1>
+            <p1>        Die neusten News</p1>
           </div>
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <h6 class="text-uppercase fw-bold mb-4">
@@ -142,16 +142,16 @@
               Nützliche Links
             </h6>
             <p1>
-              <a href="index.html?#genral" class="footernavbarlinks">General <br></a>
+              <a href="index.html?#genral" class="footernavbarlinks">Allgemein <br></a>
             </p1>
             <p1>
               <a href="index.html?#business" class="footernavbarlinks">Buisness <br></a>
             </p1>
             <p1>
-                <a href="index.html?#sports" class="footernavbarlinks">Sports <br></a>
+                <a href="index.html?#sports" class="footernavbarlinks">Sport <br></a>
               </p1>
               <p1>
-                <a href="index.html?#tehnology" class="footernavbarlinks">Technology<br></a>
+                <a href="index.html?#tehnology" class="footernavbarlinks">Technologie<br></a>
               </p1>
               <p1>
                 <a href="index.html?#entertainment" class="footernavbarlinks">Entertainment</a>
