--- a/About us.html
+++ b/About us.html
@@ -80,7 +80,7 @@
                 class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
               <h5 class="mb-0 text-center">Deniz Ugur</h5>
             </a>
-            <p class="small text-uppercase text-muted text-center ">CEO - Founder</p>
+            <p class="small text-uppercase text-muted text-center ">CTO - Founder</p>
           </div>
         </div>
         <div class="col-xl-4 col-sm-7 mb-5 align-self-center">
@@ -100,7 +100,7 @@
                 class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
               <h5 class="mb-0 text-center">Simon Streuli</h5>
             </a>
-            <p class="small text-uppercase text-muted text-center ">CEO - Founder</p>
+            <p class="small text-uppercase text-muted text-center ">CEEO - Founder</p>
           </div>
         </div>
       </div>
